force-app/main/default/objects/Contact/fields/I_IL_International_Lead__c.field-meta.xml
<CustomField>
    <fullName>I_IL_International_Lead__c</fullName>
    <description>This field fetches the number of active &quot;International Lead&quot; affiliation records linked to the contact</description>
    <label>International Lead</label>
    <summaryFilterItems>
        <field>I_RM_Affiliation__c.I_RM_Role__c</field>
        <operation>equals</operation>
        <value>Student Lead (Int)</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>I_RM_Affiliation__c.I_RM_EndDate__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>I_RM_Affiliation__c.I_RM_Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>