force-app/main/default/objects/Contact/fields/I_IL_Student_Lead_Int_IMG__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Student_Lead_Int_IMG__c</fullName>
    <description>This field is used to display a green tick icon if I_IL_International_Lead is greater than 1, or a red cross</description>
    <formula>IF( I_IL_International_Lead__c &gt;0, IMAGE(&quot;/resource/1584504556000/GreenCheck&quot;,&quot;GreenCheck&quot;,20,20), IMAGE(&quot;/resource/1639543524000/RedCross&quot;,&quot;Red Cross&quot;,20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Lead (Int)</label>
    <type>Text</type>
</CustomField>