force-app/main/default/objects/Contact/fields/I_RM_Affiliation_Associated_IMG__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Affiliation_Associated_IMG__c</fullName>
    <formula>IF( I_RM_No_Of_Affiliation__c &gt;0, IMAGE(&quot;/resource/1584504556000/GreenCheck&quot;,&quot;GreenCheck&quot;,20,20), IMAGE(&quot;/resource/1639543524000/GreyCheck&quot;,&quot;Grey Check&quot;,20,20))</formula>
    <label>Associated Affiliations</label>
    <type>Text</type>
</CustomField>