force-app/main/default/objects/Contact/fields/I_RM_Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Applicant_Email__c</fullName>
    <description>Technical Field. Email address of the applicant. It is copied from Personal email on applicant via a trigger</description>
    <label>Applicant Email</label>
    <type>Email</type>
</CustomField>