force-app/main/default/objects/Contact/fields/I_RM_Examiner_Email__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Examiner_Email__c</fullName>
    <description>LTU360-1395 - This field captures external emails of related affiliations to be used in Quick Action for sending email to examiners for Examiner Interaction.</description>
    <label>Examiner Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>