force-app/main/default/objects/Contact/fields/I_RM_External_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RM_External_Contact__c</fullName>
    <description>This field fetches the number of active &quot;External Contact&quot; affiliation records linked to the contact</description>
    <label>External Contact</label>
    <summaryFilterItems>
        <field>I_RM_Affiliation__c.I_RM_Role__c</field>
        <operation>equals</operation>
        <value>External Contact</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>I_RM_Affiliation__c.I_RM_EndDate__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>I_RM_Affiliation__c.I_RM_Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>