force-app/main/default/objects/Contact/fields/I_RM_External_Contact_IMG__c.field-meta.xml
<CustomField>
    <fullName>I_RM_External_Contact_IMG__c</fullName>
    <description>This field is used to display a green tick icon if I_RM_External_Contact_c is greater than 1, or a red cross</description>
    <formula>IF( I_RM_External_Contact__c&gt;0, IMAGE(&quot;/resource/1584504556000/GreenCheck&quot;,&quot;GreenCheck&quot;,20,20), IMAGE(&quot;/resource/1639543524000/RedCross&quot;,&quot;Red Cross&quot;,20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether the Contact is an active External Contact.</inlineHelpText>
    <label>External Contact</label>
    <type>Text</type>
</CustomField>