force-app/main/default/objects/Contact/fields/I_RM_Graduate_Researcher_DLRS__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Graduate_Researcher_DLRS__c</fullName>
    <description>Created for use in Criteria Based Sharing
Value generated via DLRS counting the number of Graduate Researcher Affiliations
Refer LTU360-853, LTU360-850, LTU360-847, LTU360-837</description>
    <label>Graduate Researcher</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>