force-app/main/default/objects/Contact/fields/I_RM_No_Of_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>I_RM_No_Of_Affiliation__c</fullName>
    <description>Number of Associated Affiliations to the Contact</description>
    <label>No. of Affiliations</label>
    <summaryForeignKey>I_RM_Affiliation__c.I_RM_Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>