force-app/main/default/objects/Contact/fields/I_RM_School_Representative_DLRS__c.field-meta.xml
<CustomField>
    <fullName>I_RM_School_Representative_DLRS__c</fullName>
    <description>Created for use in Criteria Based Sharing
Value generated via DLRS counting the number of School Representative Affiliations
Refer LTU360-853, LTU360-850, LTU360-847, LTU360-838</description>
    <label>School Representative</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>