force-app/main/default/objects/Contact/fields/I_RS_Aboriginal_Torres_Strait_Islander__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Aboriginal_Torres_Strait_Islander__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aboriginal/Torres Strait Islander</label>
    <type>Checkbox</type>
</CustomField>