force-app/main/default/objects/Contact/fields/I_RS_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Citizenship__c</fullName>
    <label>Country of Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_RM_Country</valueSetName>
    </valueSet>
</CustomField>