force-app/main/default/objects/Contact/fields/I_RS_College__c.field-meta.xml
<CustomField>
    <fullName>I_RS_College__c</fullName>
    <formula>/*Unit level*/
IF(
Account.Parent.Parent.Parent.Parent.Name = &quot;La Trobe University&quot;,
Account.Parent.Parent.Parent.Name,


/*Dept level */
IF(
Account.Parent.Parent.Parent.Name = &quot;La Trobe University&quot;,
Account.Parent.Parent.Name,



/* School level */
IF(
Account.Parent.Parent.Name = &quot;La Trobe University&quot;,
Account.Parent.Name,


/* College level */
IF(
Account.Parent.Name = &quot;La Trobe University&quot;,
Account.Name,





&quot;&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>College</label>
    <type>Text</type>
</CustomField>