force-app/main/default/objects/Contact/fields/I_RS_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Comments__c</fullName>
    <defaultValue>&quot;In case Organisation is unknown, please select your Organisation in the Organisation field. Please fill in the comments reflecting what the correct Organisation should be.&quot;</defaultValue>
    <inlineHelpText>In case Organisation is unknown, please select your Organisation in the Organisation field. Please fill in the comments reflecting what the correct Organisation should be.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>