force-app/main/default/objects/Contact/fields/I_RS_Confidential__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick to prevent Contact from appearing in the Prime Researcher Portal</inlineHelpText>
    <label>Hidden from Researcher Portal</label>
    <type>Checkbox</type>
</CustomField>