force-app/main/default/objects/Contact/fields/I_RS_Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Cost_Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Centre</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Cost_Centre__c.I_RS_Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Cost_Centre__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>