force-app/main/default/objects/Contact/fields/I_RS_Count_of_Active_Committee_Membershi__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Count_of_Active_Committee_Membershi__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Active Committee Memberships</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>