force-app/main/default/objects/Contact/fields/I_RS_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Course_Code__c</fullName>
    <label>Course Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>