force-app/main/default/objects/Contact/fields/I_RS_Course_Start_Year__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Course_Start_Year__c</fullName>
    <label>Course Start Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>