force-app/main/default/objects/Contact/fields/I_RS_Course_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Course_Status__c</fullName>
    <label>Course Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admitted</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Leave of Absence</fullName>
            </value>
            <value>
                <fullName>AWOL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>