force-app/main/default/objects/Contact/fields/I_RS_Deceased__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>