force-app/main/default/objects/Contact/fields/I_RS_Degree_Level__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Degree_Level__c</fullName>
    <label>Degree Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>