force-app/main/default/objects/Contact/fields/I_RS_Department__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Department__c</fullName>
    <formula>IF( /*Department level*/
LEFT(Account.Parent.Parent.ParentId, 15) = LEFT($Label.La_Trobe_Account, 15),
Account.Name,

IF( /*Department level*/
LEFT(Account.Parent.Parent.Parent.ParentId, 15) = LEFT($Label.La_Trobe_Account, 15),
Account.Parent.Name,




&quot;&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>