force-app/main/default/objects/Contact/fields/I_RS_Employment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Employment_End_Date__c</fullName>
    <label>Employment End Date</label>
    <type>Date</type>
</CustomField>