force-app/main/default/objects/Contact/fields/I_RS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_External_Id__c</fullName>
    <description>Used as unique id from source system(s)</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>