force-app/main/default/objects/Contact/fields/I_RS_Federation_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Federation_Id__c</fullName>
    <label>Federation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>