force-app/main/default/objects/Contact/fields/I_RS_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Full_Name__c</fullName>
    <description>Referenced by a report. Created in oder to group contacts using full name</description>
    <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>