force-app/main/default/objects/Contact/fields/I_RS_HDR_Student__c.field-meta.xml
<CustomField>
    <fullName>I_RS_HDR_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HDR Student</label>
    <type>Checkbox</type>
</CustomField>