force-app/main/default/objects/Contact/fields/I_RS_Head_Of_School__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Head_Of_School__c</fullName>
    <formula>/*Unit level*/
IF(
Account.Parent.Parent.Parent.Parent.Name = &quot;La Trobe University&quot;,
Account.Parent.Parent.I_RS_Organisation_Head__c,


/*Dept level */
IF(
Account.Parent.Parent.Parent.Name = &quot;La Trobe University&quot;,
Account.Parent.I_RS_Organisation_Head__c,


/*School level */
IF(
Account.Parent.Parent.Name = &quot;La Trobe University&quot;,
Account.I_RS_Organisation_Head__c,


&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Head of School</label>
    <type>Text</type>
</CustomField>