force-app/main/default/objects/Contact/fields/I_RS_Key_Words__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Key_Words__c</fullName>
    <label>Key Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>