force-app/main/default/objects/Contact/fields/I_RS_La_Trobe_Employee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_Employee__c</fullName>
    <description>Is true if primary Organisation has &#39;Part of La Trobe&#39; as true</description>
    <formula>Account.I_RS_Part_of_La_Trobe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>La Trobe Employee</label>
    <type>Checkbox</type>
</CustomField>