force-app/main/default/objects/Contact/fields/I_RS_La_Trobe_Student__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_Student__c</fullName>
    <description>Contact has a student Id and are linked to a La Trobe Organisation</description>
    <formula>!ISBLANK(I_RS_Student_Id__c) &amp;&amp;
Account.I_RS_Part_of_La_Trobe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>La Trobe Student</label>
    <type>Checkbox</type>
</CustomField>