force-app/main/default/objects/Contact/fields/I_RS_Logged_In_Users_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Logged_In_Users_Contact__c</fullName>
    <formula>IF (I_RS_Related_User__r.Id = $User.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In Users Contact</label>
    <type>Checkbox</type>
</CustomField>