force-app/main/default/objects/Contact/fields/I_RS_Low_Socioeconomic_Background__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Low_Socioeconomic_Background__c</fullName>
    <label>Low Socioeconomic Background</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>